<resources>
    <string name="app_name">android_cinema_management</string>
    <string name="Movie">MOVIES</string>
    <string name="Discount">Discount</string>
    <string name="buyTicket">Purchase Ticket</string>
    <string name="showOnMap">Show On Map</string>
    <string name="movie">Movie</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount">Discount</string>
    <string name="button">Button</string>
    <string name="filter">Filters</string>
    <string name="accountImage">Account</string>
    <string name="movie1">TODO</string>
    <string name="movie2">TODO</string>
    <string name="textview">TextView</string>
    <string name="movieImage" />
    <string name="showtimes">SHOWTIMES</string>
    <string name="movie_details">MOVIE DETAILS</string>
    <string name="FilmContent">Summary</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="streaming">New Streaming</string>
    <string name="upcoming">Upcoming</string>
    <string name="review">Review</string>
    <string name="Cinema">Cinema</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="log_in">Log In</string>
    <string name="signUp">SIGN UP</string>
    <string name="Register">Register</string>
    <string name="fullName">Full Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="phoneNumber">Phone</string>
    <string name="address">Address</string>
    <string name="discountAndTicket">"Hưng Làm Ở Trang này "</string>
    <string name="invite">Register Now To Get Our Exclusive News!</string>
    <string name="ac_signIn">Register</string>
    <string name="ac_sign_in">Sign In</string>
    <string name="ac_giftcard">Gift</string>
    <string name="airTicket">Free Flight</string>
    <string name="Point">Point</string>
    <string name="ac_phone">Phone</string>
    <string name="ac_email">Email</string>
    <string name="ac_policy">Payment Policy</string>
    <string name="ac_security_policy">Security Policy</string>
    <string name="ac_address">Address</string>
    <string name="RegisterNow">Register Here!</string>
    <string name="fgSignUp_confirmPassword">Confirm Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="payment_policy">Payment Policy</string>
    <string name="security_policy">Security Policy</string>
    <string name="announcement">Daily discount and upcoming events</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agreement">YES, I HAVE READ AND COMMIT TO</string>
    <string name="termAndConditions">Terms and conditions</string>
    <string name="Continue">Continue</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="alternateLogginWay">Or login with</string>
    <string name="newUser">Don\'t Have Account? Register Now!</string>
    <string name="signUphere">SignUpHere!</string>
    <string name="cities">All Cities</string>
    <string name="cinemaTitle1">CinemaTitle1</string>
    <string name="cinemaTitle2">CinemaTitle2</string>
    <string name="category">Category</string>
    <string name="rate">Rate</string>
    <string name="todo">TODO</string>
    <string name="cinemaAddress">Address</string>
    <string name="cinemaWeb">Web</string>
    <string name="cinemaDescriptionPhone">Phone</string>
    <string name="searchFrom">SEARCH AND FILTER BY</string>
    <string name="searchByMovie">Search Movie By Title</string>
    <string name="cinema">Cinema</string>
    <string name="cinemaCity">City</string>
    <string name="result">Result</string>
    <string name="filterBy">Filters</string>
    <string name="facebook_app_id">915720199146822</string>
    <string name="fb_login_protocol_scheme">fb915720199146822</string>


    <string name="discountName">Name: %1$s</string>
    <string name="discountDate">Date: %1$s</string>
    <string name="filter_city">All Cities</string>
    <string name="chooseCategory">All Categories </string>
    <string name="chooseMonth">All Months </string>
    <string name="reset">Reset</string>
    <string name="chooseRate">All Rates</string>
    <string name="chooseReview">All Reviews</string>
    <string name="filter_country">All Countries</string>
    <string name="searchByCinema">Search Cinema</string>
    <string name="user_home_dashboard">DASHBOARD</string>
    <string name="user_home_welcome">Welcome</string>
    <string name="user_home_point">Current Point</string>
    <string name="user_home_profile">Profile</string>
    <string name="user_home_history_transaction">Transactions</string>
    <string name="user_home_voucher">Voucher</string>
    <string name="user_home_review">Review</string>
    <string name="user_home_feedback">Feedback</string>
    <string name="user_home_saving">Points</string>
    <string name="user_home_logout">LOG OUT</string>
    <string name="user_home_account_type">Account Type: </string>
    <string name="news">News</string>
    <string name="saveChanges">Save Changes</string>
    <string name="pleaseEnterCurrentPassword">Enter Your Current Password</string>
    <string name="enter_new">Enter New</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_email_account">Enter Your Email Account</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="time">10:30</string>
    <string name="screen">Screen</string>
    <string name="type">2D</string>
    <string name="admin_home">ADMIN MANAGEMENT</string>
    <string name="combo">Combo</string>
    <string name="feedback">Feedback</string>
    <string name="ac_privacy_policy">Privacy Policy</string>
    <string name="send">SEND</string>
    <string name="date">Date</string>
    <string name="message">Please enter your message</string>
    <string name="topic">Topic</string>
    <string name="sendFeedback">NEW FEEDBACK</string>
    <string name="previousFeedback">ALL FEEDBACKS</string>
    <string name="AuthorName">Author Name</string>
    <string name="addReview">Please Leave Your Review</string>
    <string name="add">Add</string>
    <string name="sendReview">New Review</string>
    <string name="previousReview">All Reviews</string>
    <string name="buy_ticket">BUY TICKET</string>
    <string name="byMovie">By Movie</string>
    <string name="byDay">By Day</string>
    <string name="byCinema">By Cinema</string>
    <string name="chooseCinema">Choose Cinema</string>
    <string name="chooseMovie">Choose Movie</string>
    <string name="chooseTime">Choose Time</string>
    <string name="chooseDate">Choose Date</string>
    <string name="purchase">Purchase</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="chooseTicket">Choose Ticket</string>
    <string name="chooseCombo">Choose Combo</string>
    <string name="chooseMethod">Choose Payment Method</string>
    <string name="availableSeat">Seat is Available </string>
    <string name="ticketQuantity">Please Enter Ticket Quantity</string>
    <string name="comboQuantity">Please Enter Combo Quantity</string>
    <string name="oldUser">Have An Account?Sign In Here!</string>
    <string name="seeMore">See More Detail</string>
    <string name="ticketType">Ticket Type</string>
    <string name="payment">Payment</string>
    <string name="ticketPart">Ticket Detail</string>
    <string name="userPart">User Detail</string>
    <string name="voucher">Voucher Exchange</string>
    <string name="exchange">Exchange</string>
    <string name="title_activity_notification_user">NotificationUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="searchMovie">Find your movie here!</string>
    <string name="user_home_combo">Combos</string>
    <string name="signIn">Sign In</string>
    <string name="voucherTitle">Voucher</string>
    <string name="notification">Notification</string>
    <string name="guide">UNIVERSAL USER GUIDE</string>
    <string name="hello">Hello Huy</string>
    <string name="currentReview">User Reviews</string>
    <string name="discountDetail">Discount Detail</string>

</resources>