<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_top_corners">


    <TextView
        android:id="@+id/transaction_cinema_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/cinema"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_ticket_type_tv"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:drawableStart="@drawable/ic_baseline_loyalty_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/ticketType"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_ticket_quantity_tv"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:drawableStart="@drawable/ic_baseline_numbers_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/quantity"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_combo_type_tv"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:drawableStart="@drawable/ic_baseline_fastfood"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/combo"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_combo_quantity_tv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:drawableStart="@drawable/ic_baseline_numbers_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/quantity"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_payment_method_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:drawableStart="@drawable/ic_baseline_payment_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/payment"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="15dp"
        android:text="@string/userPart"
        android:textColor="@color/colorPrimary2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ticketPart"
        android:textColor="@color/colorPrimary2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_fullName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/fullName"
        android:textColor="@color/colorPrimary4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimary4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="30dp"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/phoneNumber"
        android:textColor="@color/colorPrimary4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/transaction_point_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:drawableStart="@drawable/ic_baseline_saving"
        android:drawablePadding="20dp"
        android:drawableTint="@color/colorPrimary4"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/Point"
        android:textColor="@color/colorPrimary4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

    <ImageView
        android:id="@+id/transaction_bottom_sheet_close"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_close_24"
        android:tint="@color/colorPrimary4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />


</androidx.constraintlayout.widget.ConstraintLayout>