<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/colorPrimary3"
    tools:context=".UserManagement.UserReview">

    <ImageView
        android:id="@+id/user_combo_logo_iv"
        android:layout_width="243dp"
        android:layout_height="246dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_final_icon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/user_review_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@color/colorPrimary3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/colorPrimary2"
        app:tabIndicatorGravity="bottom"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#fff"
        app:tabTextColor="@color/colorPrimary5">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendReview"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentReview" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousReview" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/user_review_close_iv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:tint="@color/colorPrimary2"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/user_review_viewpager2"
        android:layout_width="413dp"
        android:layout_height="504dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_review_tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>