<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/colorPrimary3"
    tools:context=".AccountManagement.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1990dp">

            <EditText
                android:id="@+id/fgSignUp_password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="488dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_dateOfBirth"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:drawableStart="@drawable/ic_baseline_cake_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/dateOfBirth"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_fullName4"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="324dp"
                android:drawableStart="@drawable/ic_baseline_home_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_fullName3"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="244dp"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_email"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="412dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_fullName2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="172dp"
                android:drawableStart="@drawable/ic_baseline_transgender_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/gender"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fgSignUp_fullName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/fullName"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary4"
                android:textColorHint="@color/colorPrimary5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/fgSignUp_RegisterButton"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="572dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/Register"
                android:textColor="@color/colorPrimary5"
                android:textSize="18sp"
                app:iconGravity="start"
                app:iconPadding="4dp"
                app:iconTint="@color/colorPrimary4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>