<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary3"
    android:clickable="true"
    android:focusable="true"
    tools:context=".SearchMovieAndCinema">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/searchFrom"
        android:textColor="@color/colorPrimary4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/round_login_page"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/searchByMovie"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorPrimary4"
        android:textColorHint="@color/colorPrimary5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <androidx.viewpager2.widget.ViewPager2
        android:id ="@+id/fragSearchViewPager2"
        android:layout_width="0dp"
        android:layout_height="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragSearch" />

    <com.google.android.material.tabs.TabLayout
        android:id = "@+id/fragSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:background="@color/colorPrimary3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/colorPrimary2"
        app:tabIndicatorGravity="bottom"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#fff"
        app:tabTextColor="@color/colorPrimary5">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>